Finish Text Cleaning Part A

--- a/Part-02-A.ipynb
+++ b/Part-02-A.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Text Cleaning\n",
     "\n",
-    "This is a code walkthrough for self-starters on most text cleaning task.  "
+    "This is a code walkthrough for self-starters on most common text cleaning tasks.\n",
+    "After the end of this notebook, you will be able to: \n",
+    "1. Understand tokenization, do it manually yourself - and using spaCy\n",
+    "2. Understand why stop word removal and case standardization work - with spaCy examples\n",
+    "3. Differentiate between Stemming and Lemmatization - with spaCy lemmatization examples"
    ]
   },
   {
@@ -19,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "url = 'http://www.gutenberg.org/ebooks/1661.txt.utf-8'\n",
@@ -29,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import urllib.request\n",
@@ -68,15 +76,12 @@
      "output_type": "stream",
      "text": [
       "ï»¿Project Gutenberg's The Adventures of Sherlock Holmes, by Arthur Conan Doyle\n",
-      "\n",
-      "This eBook is for the use of anyone anywhere at no cost and with\n",
-      "almost no restrictions whatsoever.  You may copy it, give it away or\n",
-      "re-use it under the terms of the Project Gutenberg License included\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "!head -5 sherlock.txt"
+    "!head -2 sherlock.txt"
    ]
   },
   {
@@ -84,7 +89,6 @@
    "metadata": {},
    "source": [
     "The file contains header and footer information from Project Gutenberg. We are not interested in the same and will discard the copyright and other legal notices. \n",
-    "\n",
     "Todo: \n",
     "- Open the file and delete the header and footer information and save the file as ```sherlock_clean.txt```\n",
     "\n",
@@ -94,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!sed -i 1,33d sherlock.txt"
@@ -135,8 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Exploration Notes\n",
-    "\n",
+    "## What do I see? \n",
     "\n",
     "Before I continue to text cleaning for any Natural Language Processing Task, I like to spend a few seconds taking a quick glance at the data itself. I noted down some of the things I spotted below, of course a trained eye can see a lot more than I did: \n",
     "\n",
@@ -195,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore Loaded Data"
+    "### Exploring Loaded Data"
    ]
   },
   {
@@ -254,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +285,7 @@
        "['red-headed', 'woman', 'on', 'the', 'street']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +320,7 @@
        "['Words', 'words', 'words', '']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,8 +339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "words_alphanumeric = re.split('\\W+', text)"
@@ -343,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +359,7 @@
        "(109111, 107431)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -420,19 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2.46 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "import spacy\n",
-    "\n",
     "nlp = spacy.load('en')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "doc = nlp(text)"
@@ -449,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +525,19 @@
     "> - **Can a prefix, suffix or infix be split off?** For example punctuation like commas, periods, hyphens or quotes.\n",
     ">\n",
     "> ![caption](https://spacy.io/assets/img/tokenization.svg)\n",
-    "> from [spaCy-101](https://spacy.io/usage/spacy-101) docs\n",
-    "\n",
-    "We can also use spaCy to extract one sentence at a time, instead of one-word-at-a-time. "
+    "> from [spaCy-101](https://spacy.io/usage/spacy-101) docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sentence Tokenization**: We can also use spaCy to extract one sentence at a time, instead of one-word-at-a-time. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -537,6 +559,377 @@
     "sentences = list(doc.sents)\n",
     "print(sentences[13:18])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STOP WORD REMOVAL & CASE CHANGE\n",
+    "\n",
+    "These simple ideas are widespread and fairly effective for a lot of tasks. They are particularly useful in reducing the number of unique tokens in a document for your processing.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "spaCy has already marked each token as a stop word or not and stored it in `is_stop` attribute of each token. This makes it very handy for text cleaning. Let's take a quick look: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sentence_example = \"the AI/AGI uprising cannot happen without the progress of NLP\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(the, True, False),\n",
+       " (AI, False, False),\n",
+       " (/, False, True),\n",
+       " (AGI, True, False),\n",
+       " (uprising, False, False),\n",
+       " (can, True, False),\n",
+       " (not, True, False),\n",
+       " (happen, False, False),\n",
+       " (without, True, False),\n",
+       " (the, True, False),\n",
+       " (progress, False, False),\n",
+       " (of, True, False),\n",
+       " (NLP, True, False)]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(token, token.is_stop, token.is_punct) for token in nlp(sentence_example)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE False False\n",
+      "ADVENTURES False False\n",
+      "OF False False\n",
+      "SHERLOCK False False\n",
+      "HOLMES False False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc[:5]:\n",
+    "    print(token, token.is_stop, token.is_punct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interesting, while `the` and `of` were marked as stop words, `THE` and `OF` were not. This is not a bug but by design. spaCy doesn't remove words which are probably important because of their CAPS or Title Case automatically. \n",
+    "\n",
+    "We can instead force this behaviour by converting our original text to lower case before we pass it to spaCy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_lower = text.lower()  # native python function\n",
+    "doc_lower = nlp(text_lower)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the True\n",
+      "adventures False\n",
+      "of True\n",
+      "sherlock False\n",
+      "holmes False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc_lower[:5]:\n",
+    "    print(token, token.is_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'spaCy has a dictionary of 305 stop words'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from spacy.lang.en.stop_words import STOP_WORDS\n",
+    "f'spaCy has a dictionary of {len(list(STOP_WORDS))} stop words'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also extend the STOP WORDS dictionary on the fly for your domain. For instance, if you were using this code to process text of a NLP book, we might want to add words like `NLP`, `Processing`, `AGI`, `Data` etc. to stop words list. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "domain_stop_words = [\"NLP\", \"Processing\", \"AGI\"]\n",
+    "for word in domain_stop_words:\n",
+    "    STOP_WORDS.add(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(the, True, False),\n",
+       " (AI, False, False),\n",
+       " (/, False, True),\n",
+       " (AGI, True, False),\n",
+       " (uprising, False, False),\n",
+       " (can, True, False),\n",
+       " (not, True, False),\n",
+       " (happen, False, False),\n",
+       " (without, True, False),\n",
+       " (the, True, False),\n",
+       " (progress, False, False),\n",
+       " (of, True, False),\n",
+       " (NLP, True, False)]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(token, token.is_stop, token.is_punct) for token in nlp(sentence_example)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exactly as expected, `NLP` and `AGI` are now marked as stop words too. \n",
+    "\n",
+    "Let's pull out string tokens which are not stop words into a Python list or similar data structure. \n",
+    "Most NLP tasks which come after text pre-processing expect string tokens and not spaCy token objects as datatype. \n",
+    "\n",
+    "We will remove both stop words and punctuations here for demonstration: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AI', 'uprising', 'happen', 'progress']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[str(token) for token in nlp(sentence_example) if not token.is_stop and not token.is_punct]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AI', '/', 'uprising', 'happen', 'progress']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[str(token) for token in nlp(sentence_example) if not token.is_stop]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stemming and Lemmatization\n",
+    "\n",
+    "> **Stemming** usually refers to a crude heuristic process that chops off the ends of words in the hope of achieving this goal correctly most of the time, and often includes the removal of derivational affixes. \n",
+    "\n",
+    "> **Lemmatization** usually refers to doing things properly with the use of a vocabulary and morphological analysis of words, normally aiming to remove inflectional endings only and to return the base or dictionary form of a word, which is known as the lemma. \n",
+    "\n",
+    "> If confronted with the token `saw`, stemming might return just `s`, whereas lemmatization would attempt to return either `see` or `saw` depending on whether the use of the token was as a verb or a noun.\n",
+    "\n",
+    "> - Christopher Manning et al, 2008, [IR-Book](https://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### spaCy for Lemmatization\n",
+    "\n",
+    "**spaCy only supports lemmatization**. As discussed by spaCy core contributor in [issue #327](https://github.com/explosion/spaCy/issues/327) on Github, stemmer's are rarely a good idea. \n",
+    "\n",
+    "We want to treat `meet/NOUN` as different from `meeting/VERB`. Unlike Stanford NLTK which was created to introduce as many NLP ideas as possible, spaCy takes an opinionated stand against stemming. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An underscore at end, such as `lemma_` tells spaCy we are looking for something which is human readable. spaCy stores the internal hash or identifier which spaCy stores in `token.lemma`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(Their, '-PRON-', 561228191312463089, 'ADJ'),\n",
+       " (Apples, 'apples', 14374618037326464786, 'PROPN'),\n",
+       " (&, '&', 15473034735919704609, 'CCONJ'),\n",
+       " (Banana, 'banana', 2525716904149915114, 'PROPN'),\n",
+       " (fruit, 'fruit', 17674554054627885835, 'NOUN'),\n",
+       " (salads, 'salad', 16382906660984395826, 'NOUN'),\n",
+       " (are, 'be', 10382539506755952630, 'VERB'),\n",
+       " (amazing, 'amazing', 12968186374132960503, 'ADJ'),\n",
+       " (., '.', 12646065887601541794, 'PUNCT'),\n",
+       " (Would, 'would', 6992604926141104606, 'VERB'),\n",
+       " (you, '-PRON-', 561228191312463089, 'PRON'),\n",
+       " (like, 'like', 18194338103975822726, 'VERB'),\n",
+       " (meeting, 'meet', 6880656908171229526, 'VERB'),\n",
+       " (me, '-PRON-', 561228191312463089, 'PRON'),\n",
+       " (at, 'at', 11667289587015813222, 'ADP'),\n",
+       " (the, 'the', 7425985699627899538, 'DET'),\n",
+       " (cafe, 'cafe', 10569699879655997926, 'NOUN'),\n",
+       " (?, '?', 8205403955989537350, 'PUNCT')]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemma_sentence_example = \"Their Apples & Banana fruit salads are amazing. Would you like meeting me at the cafe?\"\n",
+    "[(token, token.lemma_, token.lemma, token.pos_ ) for token in nlp(lemma_sentence_example)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a quite a few things going on here. Let's discuss them: \n",
+    "\n",
+    "**-PRON-**\n",
+    "\n",
+    "spaCy has a slightly annoying lemma (recall: lemma is the output of lemmatization): -PRON-. This is used as the lemma for all PRONouns such as `Their`, `you`, `me` and `I`. Some other NLP tools instead lemmatize to `I` instead of a placeholder `-PRON-`\n",
+    "\n",
+    "**(automatic) Lower casing**\n",
+    "\n",
+    "While checking for stop words, spaCy did not automatically lower case our input while comparison. On the other hand, while lemmatization it did. It converted `Apples` to `apple` and `Banana` to `banana`. \n",
+    "\n",
+    "**meeting to meet**\n",
+    "\n",
+    "Lemmatization is aware of the linguistic role the word plays in context. `Meeting` is converted to `meet` because it's a verb. spaCy does expose part of speech tagging and other linguistic features for us to use. We will learn how to query those soon. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### spaCy comparison with Stanford CoreNLP and NLTK\n",
+    "\n",
+    "|Feature|\tSpacy|\tNLTK|\tCore NLP|\n",
+    "        |---|---|-----|---|\n",
+    "|Python API|\tY|\tY|\tN|\n",
+    "|Multi Language support|\tY|\tY|\tY|\n",
+    "|Tokenization|\tY|\tY|\tY|\n",
+    "|Lemmatization| Y|\tY|\tY|\n",
+    "|Stemming|\tN|\tY|\tY|\n",
+    "|Part-of-speech tagging|\tY|\tY|\tY|\n",
+    "|Sentence segmentation|\tY|\tY|\tY|\n",
+    "|Dependency parsing|\tY|\tN|\tY|\n",
+    "|Entity Recognition|\tY|\tY|\tY|\n",
+    "|*Integrated word vectors*|\tY|\tN|\tN|\n",
+    "|Sentiment analysis|\tY|\tY|\tY|\n",
+    "|*Coreference resolution*|\tN|\tN|\tY|\n",
+    "|*Built-in Text Classification*|Y | N| N|\n",
+    "\n",
+    "- corrected the partially wrong and outdated version on [AnalyticsVidhya](https://www.analyticsvidhya.com/blog/2017/04/natural-language-processing-made-easy-using-spacy-%E2%80%8Bin-python/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
