--- a/Part-02-B.ipynb
+++ b/Part-02-B.ipynb
@@ -4,17 +4,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text Cleaning\n",
+    "# Text Mining \n",
+    "### Information Extraction \n",
     "\n",
-    "For Information Retrieval and Search"
+    "This notebook covers the simple but a powerful tool in text processing: **Regex**. Regex is extremely powerful for pulling out specific pieces of information which match a pattern. \n",
+    "\n",
+    "While regex is extremely powerful, it is slow when you have to run multiple regex of similar type over a single document. \n",
+    "\n",
+    "We will see how [FlastText](https://github.com/vi3k6i5/flashtext) helps speed this up by 5-10X. FlashText has seen lot of love from community. Adopters include [NLProc](https://github.com/NIHOPA/NLPre) - the NLP Preprocessing Toolkit from National Institute of Health. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python 3.6.4 :: Anaconda, Inc.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version\n",
+    "__author__ = \"nirant.bits@gmail.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task Introduction\n",
+    "\n",
+    "As an example task, consider the challenge of automating Amazon Retail's customer service email response. We should be able to find the following attributes or mark them as missing with high confidence:\n",
+    "\n",
+    "- Order Id\n",
+    "- Dates (such as Shopping Date, Order Delivery) \n",
+    "- Any `$` amounts \n",
+    "\n",
+    "Please note that I don't have any relation to Amazon other than shopping from there. \n",
+    "\n",
+    "Let's consider the following totally imagined complaint email from me to Jeff Bezos, the CEO of Amazon:\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complaint_email = \"\"\"Hello Jeff,\n",
+    "\n",
+    "I am Nirant, a loyal Amazon in first customer for months now. I am a huge fan of Kindle as well. \n",
+    "I am stuck in a new city without a phone thanks to a sequence of problems - and are now compounded by Amazon's inhumane behaviour.\n",
+    "\n",
+    "The particular issues I am facing: My new phone bought from Amazon stopped working. What did I do? Requested a replacement on Jul 23\n",
+    "- First Issue: The system did not allow a pick up on July 23 forcing a delay of more than a day to 24 July 8:00 - 11:00 AM\n",
+    "- Second Issue: Despite requesting the customer service on chat THRICE, the pickup is delayed to July 24 8:00 - 11:00 AM\n",
+    "- Third Issue: The pickup is rescheduled without any reason!\n",
+    "\n",
+    "Is this how you want Amazon to be world's most customer centric company?\n",
+    "\n",
+    "Here is how Amazon can help me:\n",
+    "- Pick up the order as urgently as possible\n",
+    "- Deliver the phone on a priority basis on Monday i.e. July 25 itself\n",
+    "\n",
+    "Here are the order numbers for reference: \n",
+    "ORDER # 402-4870778-5154753 and ORDER # 404-8689779-9721113\n",
+    "\n",
+    "Here is my phone number: +91 7737887058\n",
+    "\n",
+    "I am stuck in a new city, where I don't know the language or directions without a working phone. I would really appreciate it if you could help in anyway. \n",
+    "\n",
+    "Regards,\n",
+    "Nirant Kasliwal\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yikes, that is a lot of text. \n",
+    "\n",
+    "**The information to pull from this are (1) dates + times (2) phone number and (3) order numbers**. Let's figure out how to do that\n",
+    "\n",
+    "### Extract Date and Times\n",
+    "\n",
+    "If you are new to regex, consider reading the amazing [HOWTO on Python Regex](https://docs.python.org/3/howto/regex.html) and then coming back here. Let's warm up our regex muscles a bit: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['12', '11', '10']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = re.compile(r'\\d+')\n",
+    "p.findall('12 drummers drumming, 11 pipers piping, 10 lords a-leaping')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TKX: Add compile and findall explanations here\n",
+    "\n",
+    "TKX: Add d+ explanations here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "date_pattern = r\"^(Jan|Feb|Mar|Apr|May|Jun|July|Aug|Sep|Oct|Nov|Dec)$\"\n",
+    "p = re.compile(date_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.findall(complaint_email)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
