Add download dataset in Part-05

--- a/Part-03.ipynb
+++ b/Part-03.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Main Headings :\n",
     "- HEADING 1: Linguistic Roots of English Language\n",
-    "- HEADING 2: Leveraging Language: Example Tasks - Slot Filling\n",
+    "- HEADING 2: Leveraging Language: Example Tasks - Chat bots and Search\n",
     "- HEADING 3: PoS Tagging, NP Chunking\n",
     "- HEADING 4: NER: Inbuilt models\n",
     "- HEADING 5: Gluing it all together\n",
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import spacy"
@@ -42,6 +44,28 @@
     "If there is an error above, try:\n",
     "- Windows Shell:```python -m spacy download en``` as **Administrator**\n",
     "- Linux Terminal:```sudo python -m spacy download en ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linguistics\n",
+    "\n",
+    "### Linguistics Application: Chatbots\n",
+    "Chat bots or conversational systems such as Siri need to have intricate understanding of language to do two main things: \n",
+    "1. Understand human input in either text or voice\n",
+    "    - this input is different from how we use search, for instance we might enter the exact item we want to buy in Amazon search but we will might Alexa for suggestions on best toys for 3 year olds\n",
+    "\n",
+    "2. Generate language response\n",
+    "    - What does a Google search for *Steve Jobs Birthday* return for you? A list of web pages. On the other hand, you would expect Siri not only tell the exact date of Job's birth - but also a proper sentence such as: *Steve Jobs was born on 24 Feb 1955*\n",
+    "\n",
+    "\n",
+    "\n",
+    "The way we study language is referred to as linguistics. This section covers language concepts as applied to Natural Language Processing. \n",
+    "\n",
+    "We have seen some of this when we studied English Grammar back in our school days. Famously, you might want to recap the following: _noun_, _verb_, _gerund_ and so on. \n",
+    "\n"
    ]
   },
   {
@@ -90,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -111,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
