Add FuzzyWuzzy in 02-B; 05 progress

--- a/Part-02-B.ipynb
+++ b/Part-02-B.ipynb
@@ -33,9 +33,335 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spell Correction\n",
+    "One of the most frequently seen text challenges is correcting spellings. This is even all the more true when data is entered by casual human users, for instance, say shipping addresses or similar. \n",
+    "\n",
+    "Let's take an example, we want to correct `Gujrat`, `Gujart` and other minor misspelligns to  `Gujarat`.\n",
+    "There are several good ways to do this, depending on your dataset, and level of expertise. We discuss 2-3 popular ways, and discuss their pros and cons. \n",
+    "\n",
+    "Before I begin, we need to pay our homage to the legendary [Peter Norvig's Spell Correct](https://norvig.com/spell-correct.html). It's stil worth a read on how to _think_ about solving a problem and _exploring_ implementations. Even the way he refactors his code and writes functions is educational. \n",
+    "\n",
+    "His spell correction module is not the simplest or best way. I recommend two packages: one with a bias towards simplicity, one with a bias towards giving you all the knives, bells and whistles to try:\n",
+    "\n",
+    "**[FuzzyWuzzy](https://github.com/seatgeek/fuzzywuzzy)** is easy to use. It gives a simple similarity score between two strings, capped to 100. Higher numbers mean the words are more similar. \n",
+    "\n",
+    "**[Jellyfish](https://github.com/jamesturk/jellyfish)** supports 6 edit distance functions and 4 phonetic encoding options which you can use as per your use case. \n",
+    "\n",
+    "## FuzzyWuzzy\n",
+    "\n",
+    "If you have heard or used the [Levenshtein distance](https://www.wikiwand.com/en/Levenshtein_distance) (or, _edit distance_ functions in general), this package is a wrapper over the same. It uses difflib from the standard Python libs as well. \n",
+    "\n",
+    "Let's see how we can use FuzzyWuzzy to correct our misspellings:\n",
+    "\n",
+    "**Installation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: fuzzywuzzy[speedup] in c:\\users\\nirantk\\anaconda3\\envs\\fastai\\lib\\site-packages\n",
+      "Collecting python-levenshtein>=0.12; extra == \"speedup\" (from fuzzywuzzy[speedup])\n",
+      "  Downloading python-Levenshtein-0.12.0.tar.gz (48kB)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\nirantk\\anaconda3\\envs\\fastai\\lib\\site-packages (from python-levenshtein>=0.12; extra == \"speedup\"->fuzzywuzzy[speedup])\n",
+      "Building wheels for collected packages: python-levenshtein\n",
+      "  Running setup.py bdist_wheel for python-levenshtein: started\n",
+      "  Running setup.py bdist_wheel for python-levenshtein: finished with status 'done'\n",
+      "  Stored in directory: C:\\Users\\nirantk\\AppData\\Local\\pip\\Cache\\wheels\\c0\\83\\e9\\b2cc2876e175d04091caf4e9f5de564ff2503b1f1885e7c3ba\n",
+      "Successfully built python-levenshtein\n",
+      "Installing collected packages: python-levenshtein\n",
+      "Successfully installed python-levenshtein-0.12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import sys\n",
+    "# !{sys.executable} -m pip install fuzzywuzzy\n",
+    "# alternative for 4-10x faster computation: \n",
+    "# !{sys.executable} -m pip install fuzzywuzzy[speedup]\n",
+    "\n",
+    "# Collecting fuzzywuzzy\n",
+    "#   Downloading fuzzywuzzy-0.16.0-py2.py3-none-any.whl\n",
+    "# Installing collected packages: fuzzywuzzy\n",
+    "# Successfully installed fuzzywuzzy-0.16.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fuzzywuzzy import fuzz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.ratio(\"Electronic City Phase One\", \"Electronic City Phase One, Bangalore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.partial_ratio(\"Electronic City Phase One\", \"Electronic City Phase One, Bangalore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see how the `ratio` function is confused by the trailing “Bangalore” used in address above, but really the two strings refer to the same address/entity. This is captured by `partial_ratio`. \n",
+    "\n",
+    "Note that how both `ratio` and `partial_ratio` are sensitive to ordering of the words. This is useful for comparing addresses, which follow a rough logical order. On the other hand, if we want to compare something else like person names, it might give counterintuitive results: \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.ratio('Narendra Modi', 'Narendra D. Modi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.partial_ratio('Narendra Modi', 'Narendra D. Modi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arrgh, this is not nice. Just because we had an extra `D.` token, our logic is less universal. We want something that is less order sensitive. Luckily, the authors of fuzzywuzzy kept this in mind. \n",
+    "\n",
+    "They support functions which tokenize our input on space, remove punctuations, numbers and non-ASCII characters. Then this is used to calculate similarity. Let's try that out: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.token_sort_ratio('Narendra Modi', 'Narendra D. Modi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.token_set_ratio('Narendra Modi', 'Narendra D. Modi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Nice, this works perfectly for us. In case we have a list of options and we want to find the closest match(es), we can use the process module:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from fuzzywuzzy import process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Gujarat', 92), ('Gujarat Govt.', 75), ('Gujjar', 67)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Gujarat', 92)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = 'Gujrat'\n",
+    "choices = ['Gujarat', 'Gujjar', 'Gujarat Govt.']\n",
+    "# Get a list of matches ordered by score, default limit to 5\n",
+    "print(process.extract(query, choices))\n",
+    "\n",
+    "# If we want only the top one\n",
+    "process.extractOne(query, choices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Bangalore', 94), ('Bengaluru', 59)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Bangalore', 94)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = 'Banglore'\n",
+    "choices = ['Bangalore', 'Bengaluru']\n",
+    "print(process.extract(query, choices))\n",
+    "process.extractOne(query, choices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('chilli', 91), ('chilling', 77), ('chilled', 67)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('chilli', 91)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's take an example of a common search typo in online shopping:\n",
+    "query = 'chili'\n",
+    "choices = ['chilli', 'chilled', 'chilling']\n",
+    "print(process.extract(query, choices))\n",
+    "process.extractOne(query, choices)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re"
@@ -45,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Task Introduction\n",
+    "## [Basic] Information Extraction\n",
     "\n",
     "As an example task, consider the challenge of automating Amazon Retail's customer service email response. We should be able to find the following attributes or mark them as missing with high confidence:\n",
     "\n",
@@ -55,14 +381,15 @@
     "\n",
     "Please note that I don't have any relation to Amazon other than shopping from there. \n",
     "\n",
-    "Let's consider the following totally imagined complaint email from me to Jeff Bezos, the CEO of Amazon:\n",
-    "---"
+    "Let's consider the following totally imagined complaint email from me to Jeff Bezos, the CEO of Amazon:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "complaint_email = \"\"\"Hello Jeff,\n",
@@ -177,7 +504,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
