--- a/Part-05.ipynb
+++ b/Part-05.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -57,11 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_data(url, filename):\n",
+    "    \"\"\"\n",
+    "    Download data if the filename does not exist already\n",
+    "    Uses Tqdm to show download progress\n",
+    "    \"\"\"\n",
     "    if not os.path.exists(filename):\n",
     "\n",
     "        dirname = os.path.dirname(filename)\n",
@@ -74,21 +80,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's download some data:\n",
+    "data_url = 'http://files.fast.ai/data/aclImdb.tgz'\n",
+    "get_data(data_url, 'data/imdb.tgz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's extract the files above and see what the directory contains:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aclImdb.tgz: 146MB [03:44, 312kB/s]                                                                                    \n"
+      "test\n",
+      "train\n",
+      "all\n",
+      "neg\n",
+      "pos\n",
+      "all\n",
+      "neg\n",
+      "pos\n",
+      "unsup\n"
      ]
     }
    ],
    "source": [
-    "# Let's download some data:\n",
-    "data_url = 'http://files.fast.ai/data/aclImdb.tgz'\n",
-    "get_data(data_url, 'data/imdb')"
+    "for pathroute in os.walk('data\\\\imdb\\\\aclImdb'):\n",
+    "    next_path = pathroute[1]\n",
+    "    for stop in next_path:\n",
+    "        print(stop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "This really badly written utility tells us that there are atleast two folders: `train` and `test`. Each of these folders in turn has atleast 3 folders:\n",
+    "```bash\n",
+    "Test\n",
+    "|- all\n",
+    "|- neg\n",
+    "|- pos\n",
+    "```\n",
+    "and\n",
+    "\n",
+    "```bash\n",
+    "Train\n",
+    "|- all\n",
+    "|- neg\n",
+    "|- pos\n",
+    "|- unsup\n",
+    "```\n",
+    "\n",
+    "The pos and neg folders contain reviews which are positive and negative respectively. The `unsup` folder stands for unsupervised. They are useful for building language models, specially for Deep Learning. We will not use that here. Similarly, all is redundant because these reviews are repeated in pos and neg folders. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
    ]
   },
   {
