Add benchmarking plots, simplify text

--- a/Part-02-B.ipynb
+++ b/Part-02-B.ipynb
@@ -119,10 +119,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see how the `ratio` function is confused by the trailing “Bangalore” used in address above, but really the two strings refer to the same address/entity. This is captured by `partial_ratio`. \n",
+    "We see how the `ratio` makes a mistake because of the trailing “Bangalore” used in the address above. Yet, the two strings refer to the same address/entity. `partial_ratio` captures this.\n",
     "\n",
-    "Note that how both `ratio` and `partial_ratio` are sensitive to ordering of the words. This is useful for comparing addresses, which follow a rough logical order. On the other hand, if we want to compare something else like person names, it might give counterintuitive results: \n",
-    "\n"
+    "Do you see how both ratio and partial_ratio are sensitive to the ordering of the words? This is useful for comparing addresses, which follow some order.  f we want to compare something else, e.g. person names, it might give counterintuitive results:"
    ]
   },
   {
@@ -169,9 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arrgh, this is not nice. Just because we had an extra `D.` token, our logic is less universal. We want something that is less order sensitive. Luckily, the authors of fuzzywuzzy kept this in mind. \n",
+    "Arrgh, this is not nice. Because we had an extra `D.` token, our logic is not applicable anymore. We want something that is less order sensitive. The authors of fuzzywuzzy have us covered.\n",
     "\n",
-    "They support functions which tokenize our input on space, remove punctuations, numbers and non-ASCII characters. Then this is used to calculate similarity. Let's try that out: "
+    "They support a utility function. This will tokenize our input on space, remove punctuations, numbers and non-ASCII characters. Then use this to calculate similarity. Let's try that out:"
    ]
   },
   {
@@ -763,13 +762,14 @@
     "\n",
     "Of course, there are several different solutions possible to this problem. I recommend this for it's simplicity and focus on solving one problem. It does not require us to learn new syntax or setup specific tools such as ElasticSearch. \n",
     "\n",
-    "Comparing Flashtext vs Compiled Regex for Search: \n",
+    "![Comparing Flashtext vs Compiled Regex for Search](https://cdn-images-1.medium.com/max/1600/1*WMgrVJmoke7ZIyYSuReEjw.png)\n",
+    "                   \n",
+    "                       Comparing Flashtext vs Compiled Regex for Search\n",
     "\n",
-    "![Comparing Flashtext vs Compiled Regex for Search]()\n",
     "\n",
-    "Comparing FlashText vs Compiled Regex for Substitutions: \n",
+    "![Comparing FlashText vs Compiled Regex for Substitutions](https://cdn-images-1.medium.com/max/1600/1*doXUZk_bYVVvNf7O3JIQSw.png)\n",
     "\n",
-    "![Comparing FlashText vs Compiled Regex for Substitutions]()\n",
+    "                        Comparing FlashText vs Compiled Regex for Substitutions\n",
     "\n",
     "We notice that while the time taken by Regex scales almost linearly, Flashtext is relatively flat. Now we understand, that we need Flashtext for speed and scale. FlashText has seen lot of love from community. Adopters include [NLProc](https://github.com/NIHOPA/NLPre) - the NLP Preprocessing Toolkit from National Institute of Health. \n",
     "\n",
@@ -784,18 +784,10 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: flashtext in c:\\users\\nirantk\\anaconda3\\envs\\fastai\\lib\\site-packages\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install flashtext"
+    "# import sys\n",
+    "# !{sys.executable} -m pip install flashtext"
    ]
   },
   {
